.vscode/demos/Gateway demo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: api-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    hostname: kodekloud.com
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-route
  namespace: default
spec:
  parentRefs:
  - name: api-gateway
  hostnames:
  - "abc.com"
  - "www.abc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wear
    backendRefs:
    - name: wear-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /watch
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Access-Control-Allow-Origin
          value: "*"
        - name: Access-Control-Allow-Methods
          value: "GET, POST, PUT, DELETE, OPTIONS"
        - name: Access-Control-Allow-Headers
          value: "Content-Type, Authorization"
        - name: Access-Control-Allow-Credentials
          value: "true"
        - name: Access-Control-Max-Age
          value: "3600"
    backendRefs:
    - name: watch-svc-v1
      port: 8080
      weight: 50
    - name: watch-svc-v2
      port: 8080
      weight: 50
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx-gateway-class
spec:
  controllerName: nginx.org/gateway-controller
